feat: support SOCKS5 proxy

--- a/compose.yaml
+++ b/compose.yaml
@@ -10,9 +10,12 @@ services:
     ports:
       - 5980:5980  # novpn
       - 8118:8118  # privoxy
+    volumes:
+      - ${SSH_AUTH_SOCK:-/dev/null}:/ssh_agent.sock
     # Variables defined in the `environment` section override ones defined in proxy.env.
     environment:
       TZ: Asia/Tokyo
+      SSH_AUTH_SOCK: /ssh_agent.sock
       # Enabling logging.
       #CSC_LOGGING_OUTPUT: STDOUT
     # Optional
